--- a/pom.xml
+++ b/pom.xml
@@ -1,58 +1,35 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.broadleafcommerce</groupId>
-        <artifactId>broadleaf-module-parent</artifactId>
+        <groupId>com.ultracommerce</groupId>
+        <artifactId>ultracommerce-module-parent</artifactId>
         <version>3.0.4-GA</version>
     </parent>
 
-    <groupId>org.broadleafcommerce</groupId>
-    <artifactId>broadleaf-menu</artifactId>
-    <name>BroadleafCommerce Menu</name>
+    <groupId>com.ultracommerce</groupId>
+    <artifactId>ultracommerce-menu</artifactId>
+    <name>UltraCommerce Menu</name>
     <description>BroadleafCommerce Menu</description>
     <version>3.0.2-SNAPSHOT</version>
     <properties>
-        <blc.version>6.0.8-GA</blc.version>
+        <ultracommerce.version>6.1.3-SNAPSHOT</ultracommerce.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.uri>${project.baseUri}</project.uri>
     </properties>
     <scm>
-        <connection>scm:git:git@github.com:BroadleafCommerce/Menu.git</connection>
-        <developerConnection>scm:git:git@github.com:BroadleafCommerce/Menu.git</developerConnection>
-        <url>https://github.com/BroadleafCommerce/BroadleafCommerce</url>
-      <tag>HEAD</tag>
+        <connection>scm:git:git@github.com:Ultra-Commerce-Staging/Menu.git</connection>
+        <developerConnection>scm:git:git@github.com:Ultra-Commerce-Staging/Menu.git</developerConnection>
+        <url>https://github.com/Ultra-Commerce-Staging/Menu</url>
+        <tag>HEAD</tag>
     </scm>
 
-    <url>http://www.broadleafcommerce.com</url>
-    <licenses>
-        <license>
-            <name>Broadleaf Fair Use 1.0</name>
-            <url>http://license.broadleafcommerce.org/fair_use_license-1.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>Fair Use Community License</comments>
-        </license>
-        <license>
-            <name>Broadleaf End User License Agreement 1.1</name>
-            <url>http://license.broadleafcommerce.org/commercial_license-1.1.txt</url>
-            <distribution>repo</distribution>
-            <comments>Commercial License Applicable When Bounds of Fair Use License Are Exceeded</comments>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <id>architect</id>
-            <email>architect@broadleafcommerce.org</email>
-            <organization>Broadleaf Commerce</organization>
-            <organizationUrl>http://www.broadleafcommerce.org</organizationUrl>
-            <timezone>-6</timezone>
-        </developer>
-    </developers>
+    <url>https://ultracommerce.co</url>
+    
+    
     <repositories>
         <repository>
-            <id>public releases</id>
-            <name>public releases</name>
-            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/releases</url>
+            <id>ultracommerce</id>
+            <url>https://nexus.ultracommerce.io/repository/ultracommerce</url>
         </repository>
         <repository>
             <id>public snapshots</id>
@@ -66,7 +43,7 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
-                    <licenseName>blc_dual</licenseName>
+                    <licenseName>uc_dual</licenseName>
                 </configuration>
             </plugin>
         </plugins>
@@ -74,25 +51,25 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>snapshots</id>
-            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/menu-snapshots/</url>
+            <id>ultracommerce</id>
+            <url>https://nexus.ultracommerce.io/repository/ultracommerce</url>
         </snapshotRepository>
         <repository>
-            <id>releases</id>
-            <url>http://nexus.broadleafcommerce.org/nexus/content/repositories/menu-releases/</url>
+            <id>ultracommerce</id>
+            <url>https://nexus.ultracommerce.io/repository/ultracommerce</url>
         </repository>
     </distributionManagement>
     <dependencies>
         <!-- Required -->
         <dependency>
-            <groupId>org.broadleafcommerce</groupId>
-            <artifactId>broadleaf-framework</artifactId>
-            <version>${blc.version}</version>
+            <groupId>com.ultracommerce</groupId>
+            <artifactId>ultracommerce-framework</artifactId>
+            <version>${ultracommerce.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.broadleafcommerce</groupId>
-            <artifactId>broadleaf-contentmanagement-module</artifactId>
-            <version>${blc.version}</version>
+            <groupId>com.ultracommerce</groupId>
+            <artifactId>ultracommerce-contentmanagement-module</artifactId>
+            <version>${ultracommerce.version}</version>
         </dependency>
         
         <!-- Required but provided -->
