--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.ultracommerce</groupId>
     <artifactId>ultracommerce-menu</artifactId>
     <name>UltraCommerce Menu</name>
-    <description>BroadleafCommerce Menu</description>
+    <description>UltraCommerce Menu</description>
     <version>3.0.2-SNAPSHOT</version>
     <properties>
         <ultracommerce.version>6.1.3-SNAPSHOT</ultracommerce.version>
