--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <description>UltraCommerce Menu</description>
     <version>3.0.2-SNAPSHOT</version>
     <properties>
-        <ultracommerce.version>6.1.3-SNAPSHOT</ultracommerce.version>
+        <ultracommerce.version>6.1.3-GA</ultracommerce.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.uri>${project.baseUri}</project.uri>
     </properties>
@@ -34,7 +34,7 @@
         <repository>
             <id>public snapshots</id>
             <name>public snapshots</name>
-            <url>http://www.broadleafcommerce.org/nexus/content/repositories/snapshots/</url>
+            <url>http://www.ultracommerce.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
     <build>
